ngModel issue resolved

--- a/16-reforzamiento-angular/reforzamiento/src/app/components/variables/variables.component.html
+++ b/16-reforzamiento-angular/reforzamiento/src/app/components/variables/variables.component.html
@@ -19,6 +19,7 @@
 <br><br>
 
 <input type="text"
+       name="nombre"
        class="form-control"
        placeholder="Escriba un nombre"
        [(ngModel)]="nombre">
