reforzamiento, ngIf y ngFor

--- a/16-reforzamiento-angular/reforzamiento/src/app/app.component.html
+++ b/16-reforzamiento-angular/reforzamiento/src/app/app.component.html
@@ -3,6 +3,6 @@
 <div class="container">
   <h1>Hola <small> {{ nombre }}</small> </h1>
 
-  <app-variables></app-variables>
-
+  <!-- <app-variables></app-variables> -->
+  <app-estructurales></app-estructurales>
 </div>
