--- a/16-reforzamiento-angular/reforzamiento/src/app/app.component.html
+++ b/16-reforzamiento-angular/reforzamiento/src/app/app.component.html
@@ -4,5 +4,7 @@
   <h1>Hola <small> {{ nombre }}</small> </h1>
 
   <!-- <app-variables></app-variables> -->
-  <app-estructurales></app-estructurales>
+  <!-- <app-estructurales></app-estructurales> -->
+  <app-http></app-http>
+
 </div>
