--- a/16-reforzamiento-angular/reforzamiento/src/app/components/http/http.component.html
+++ b/16-reforzamiento-angular/reforzamiento/src/app/components/http/http.component.html
@@ -1,3 +1,13 @@
-<p>
-  http works!
-</p>
+
+<div class="card-group">
+  <div class="card" *ngFor="let mutante of _ms.mutantes">
+    <div class="card-body">
+      <div class="card-title">
+        {{ mutante.nombre }}
+      </div>
+      <div class="card-text">
+        {{ mutante.descripcion }}
+      </div>
+    </div>
+  </div>
+</div>
