Sesión 3, Sonidos App

--- a/2-sonidos/sonidos4/src/app/home/home.page.html
+++ b/2-sonidos/sonidos4/src/app/home/home.page.html
@@ -7,5 +7,15 @@
 </ion-header>
 
 <ion-content>
+  <!-- List of Text Items -->
+  <ion-list>
+    <ion-item *ngFor="let animal of animales">
+      <ion-avatar item-left>
+        <img [src]="animal.imagen" alt="">
+      </ion-avatar>
+
+      <h2>{{ animal.nombre }}</h2>
+    </ion-item>
+  </ion-list>
 
 </ion-content>
