Sonidos app, controles

--- a/2-sonidos/sonidos4/src/app/home/home.page.html
+++ b/2-sonidos/sonidos4/src/app/home/home.page.html
@@ -9,13 +9,30 @@
 <ion-content>
   <!-- List of Text Items -->
   <ion-list>
-    <ion-item *ngFor="let animal of animales">
-      <ion-avatar item-left>
-        <img [src]="animal.imagen" alt="">
-      </ion-avatar>
+    <ion-item-sliding *ngFor="let animal of animales">
+      <ion-item-options side="start">
+        <ion-item-option (click)="favorite(item)">Favorite</ion-item-option>
+        <ion-item-option color="danger" (click)="share(item)">Share</ion-item-option>
+      </ion-item-options>
 
-      <h2>{{ animal.nombre }}</h2>
-    </ion-item>
+      <ion-item (click)="reproducir( animal )">
+
+        <ion-avatar item-left>
+          <img [src]="animal.imagen" alt="">
+        </ion-avatar>
+
+        <h2>{{ animal.nombre }}</h2>
+
+        <ion-icon *ngIf="!animal.reproduciendo" name="play" slot="end"></ion-icon>
+        <ion-icon *ngIf="animal.reproduciendo" name="pause" slot="end"></ion-icon>
+
+      </ion-item>
+
+      <ion-item-options side="end">
+           <ion-item-option (click)="unread(item)">Unread</ion-item-option>
+      </ion-item-options>
+
+    </ion-item-sliding>
   </ion-list>
 
 </ion-content>
